--- a/config/production.toml
+++ b/config/production.toml
@@ -33,6 +33,7 @@ authorizedotnet.base_url = "https://api.authorize.net/xml/v1/request.api"
 phonepe.base_url = "https://api.phonepe.com/apis/hermes/"
 cashfree.base_url = "https://sandbox.cashfree.com/"
 fiuu.base_url = "https://pay.merchant.razer.com/"
+forte.base_url = "https://api.forte.net/v3"
 payu.base_url = "https://secure.payu.com/api/"
 paytm.base_url = "https://securegw-stage.paytm.in/"
 cashtocode.base_url = "https://cluster14.api.cashtocode.com"
