--- a/config/development.toml
+++ b/config/development.toml
@@ -7,7 +7,7 @@ level = "TRACE"
 log_format = "default"
 
 [log.kafka]
-enabled = true
+enabled = false
 level = "info"
 filtering_directive = "info"
 brokers = ["localhost:9092"]
@@ -67,7 +67,7 @@ worldpayvantiv.secondary_base_url = "https://onlinessr.vantivprelive.com"
 
 # Generic Events Configuration
 [events]
-enabled = true
+enabled = false
 brokers = ["localhost:9092"]
 topic = "audit-trail-events"
 partition_key_field = "request_id"
