build: skip git commit hashes from typo check

--- a/.typos.toml
+++ b/.typos.toml
@@ -1,5 +1,9 @@
 [default]
 check-filename = true
+extend-ignore-re = [
+    # Ignore git commit hashes (40 character hex strings)
+    "[0-9a-f]{7,40}",
+]
 
 [default.extend-identifiers]
 ACI = "ACI" # Name of a connector
@@ -11,3 +15,4 @@ iin = "iin" # iin
 PN = "PN" # Pitcairn Islands
 jus = "jus" # Juspay
 FPR = "FPR" # Fraud Prevention Rules
+
