--- a/config/production.toml
+++ b/config/production.toml
@@ -25,6 +25,7 @@ authipay.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v
 fiservemea.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
 datatrans.base_url = "https://api.datatrans.com"
 silverflow.base_url = "https://api.silverflow.co/v1"
+celero.base_url = "https://app.gotnpgateway.com"
 adyen.base_url = "https://{{merchant_endpoint_prefix}}-checkout-live.adyenpayments.com/checkout/"
 adyen.dispute_base_url = "https://{{merchant_endpoint_prefix}}-ca-live.adyen.com/"
 razorpay.base_url = "https://api.razorpay.com/"
