build: add explicit path to .typos.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Spell check
         uses: crate-ci/typos@master
+        with:
+          config: ./.typos.yml
 
   check:
     name: Compilation Check
