build: add explicit path to .typos.toml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Spell check
         uses: crate-ci/typos@master
         with:
-          config: ./.typos.yml
+          config: ./.typos.toml
 
   check:
     name: Compilation Check
