build: skip git commit hashes from typo check (#243)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Spell check
         uses: crate-ci/typos@master
+        with:
+          config: ./.typos.toml
 
   check:
     name: Compilation Check
