wellsfargo authorize flow

--- a/config/production.toml
+++ b/config/production.toml
@@ -56,6 +56,7 @@ cybersource.base_url = "https://api.cybersource.com/"
 worldpay.base_url = "https://access.worldpay.com/"
 worldpayvantiv.base_url = "https://transact.vantivcnp.com/vap/communicator/online"
 worldpayvantiv.secondary_base_url = "https://onlinessr.vantivcnp.com"
+wellsfargo.base_url = "https://api.cybersource.com/"
 
 # Generic Events Configuration
 [events]
