--- a/config/development.toml
+++ b/config/development.toml
@@ -64,6 +64,7 @@ cybersource.base_url = "https://apitest.cybersource.com/"
 worldpay.base_url = "https://try.access.worldpay.com/"
 worldpayvantiv.base_url = "https://transact.vantivprelive.com/vap/communicator/online"
 worldpayvantiv.secondary_base_url = "https://onlinessr.vantivprelive.com"
+wellsfargo.base_url = "https://apitest.cybersource.com/"
 
 # Generic Events Configuration
 [events]
