--- a/config/development.toml
+++ b/config/development.toml
@@ -29,6 +29,7 @@ bypass_proxy_urls = []
 mitm_proxy_enabled = false
 
 [connectors]
+fiservemea.base_url = "https://prod.emea.api.fiservapps.com/sandbox/ipp/payments-gateway/v2/payments"
 adyen.base_url = "https://checkout-test.adyen.com/"
 adyen.dispute_base_url = "https://ca-test.adyen.com/"
 razorpay.base_url = "https://api.razorpay.com/"
