--- a/config/development.toml
+++ b/config/development.toml
@@ -28,6 +28,15 @@ idle_pool_connection_timeout = 90
 bypass_proxy_urls = []
 mitm_proxy_enabled = false
 
+[test]
+enabled = true
+mock_server_url = "http://localhost:3000/mockGateway"
+
+[api_tags.tags]
+authorize_upicollect = "GW_INIT_COLLECT"
+authorize_upiintent = "GW_INIT_INTENT"
+createorder = "GW_CREATE_ORDER"
+psync = "GW_TXN_SYNC"
 [connectors]
 adyen.base_url = "https://checkout-test.adyen.com/"
 adyen.dispute_base_url = "https://ca-test.adyen.com/"
