bankofamerica-integration-Authorize-Capture-Psync-SetupMandate-Void

--- a/config/production.toml
+++ b/config/production.toml
@@ -76,6 +76,7 @@ trustpay.base_url_bank_redirects = "https://aapi.trustpay.eu/"
 stripe.base_url = "https://api.stripe.com/"
 cybersource.base_url = "https://api.cybersource.com/"
 worldpay.base_url = "https://access.worldpay.com/"
+bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
 worldpayvantiv.base_url = "https://transact.vantivcnp.com/vap/communicator/online"
 worldpayvantiv.secondary_base_url = "https://onlinessr.vantivcnp.com"
 bamboraapac.base_url = "https://www.bambora.co.nz/interface/api"
