--- a/config/development.toml
+++ b/config/development.toml
@@ -20,8 +20,8 @@ port = 8000
 type = "grpc"
 
 [metrics]
-host = "0.0.0.0"
-port = 8080
+host = "127.0.0.1"
+port = 8090
 
 [proxy]
 idle_pool_connection_timeout = 90
@@ -95,6 +95,7 @@ worldpayvantiv.base_url = "https://transact.vantivprelive.com/vap/communicator/o
 worldpayvantiv.secondary_base_url = "https://onlinessr.vantivprelive.com"
 paypal.base_url = "https://api-m.sandbox.paypal.com/"
 paysafe.base_url = "https://api.test.paysafe.com/paymenthub/"
+bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
 
 # Generic Events Configuration
 [events]
