--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -28,6 +28,7 @@ fiservemea.base_url = "https://prod.emea.api.fiservapps.com/sandbox/ipp/payments
 datatrans.base_url = "https://api.sandbox.datatrans.com"
 silverflow.base_url = "https://api-sbx.silverflow.co/v1"
 celero.base_url = "https://sandbox.gotnpgateway.com"
+hipay.base_url = "https://secure-gateway.hipay-tpp.com/rest/"
 adyen.base_url = "https://checkout-test.adyen.com/"
 adyen.dispute_base_url = "https://ca-test.adyen.com/"
 razorpay.base_url = "https://api.razorpay.com/"
