--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -66,4 +66,4 @@ topic = "audit-trail-events"
 partition_key_field = "request_id"
 
 [unmasked_headers]
-keys = ["x-request-id","x-merchant-id","x-lineage-ids","x-reference-id","x-connector","x-tenant-id"]
+keys = ["x-request-id","x-merchant-id","x-lineage-ids","x-reference-id","x-connector","x-tenant-id","x-shadow-mode"]
