--- a/config/development.toml
+++ b/config/development.toml
@@ -21,7 +21,7 @@ type = "grpc"
 
 [metrics]
 host = "0.0.0.0"
-port = 8080
+port = 8081
 
 [proxy]
 idle_pool_connection_timeout = 90
@@ -29,14 +29,19 @@ bypass_proxy_urls = []
 mitm_proxy_enabled = false
 
 [test]
-enabled = true
+enabled = false
 mock_server_url = "http://localhost:3000/mockGateway"
 
+# API tag configuration for flow-based tagging
+# Supports both simple flow tags and payment-method-specific tags
+#
+# Format examples:
+#   Simple flow:     psync = "GW_TXN_SYNC"
+#   With payment_method_type: authorize_upicollect = "GW_INIT_COLLECT"
+#
 [api_tags.tags]
-authorize_upicollect = "GW_INIT_COLLECT"
-authorize_upiintent = "GW_INIT_INTENT"
-createorder = "GW_CREATE_ORDER"
 psync = "GW_TXN_SYNC"
+
 [connectors]
 adyen.base_url = "https://checkout-test.adyen.com/"
 adyen.dispute_base_url = "https://ca-test.adyen.com/"
