--- a/config/development.toml
+++ b/config/development.toml
@@ -28,6 +28,20 @@ idle_pool_connection_timeout = 90
 bypass_proxy_urls = []
 mitm_proxy_enabled = false
 
+[test]
+enabled = false
+mock_server_url = "http://localhost:3000/mockGateway"
+
+# API tag configuration for flow-based tagging
+# Supports both simple flow tags and payment-method-specific tags
+#
+# Format examples:
+#   Simple flow:     psync = "GW_TXN_SYNC"
+#   With payment_method_type: authorize_upicollect = "GW_INIT_COLLECT"
+#
+[api_tags.tags]
+psync = "GW_TXN_SYNC"
+
 [connectors]
 fiservemea.base_url = "https://prod.emea.api.fiservapps.com/sandbox/ipp/payments-gateway/v2/payments"
 adyen.base_url = "https://checkout-test.adyen.com/"
