--- a/config/production.toml
+++ b/config/production.toml
@@ -24,6 +24,7 @@ mitm_proxy_enabled = false
 multisafepay.base_url = "https://testapi.multisafepay.com/v1/json"
 authipay.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
 stax.base_url = "https://apiprod.fattlabs.com"
+trustpayments.base_url = "https://webservices.securetrading.net"
 fiservemea.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
 datatrans.base_url = "https://api.datatrans.com"
 silverflow.base_url = "https://api.silverflow.co/v1"
