chore: add bluesnap connector

--- a/config/development.toml
+++ b/config/development.toml
@@ -43,6 +43,8 @@ mock_server_url = "http://localhost:3000/mockGateway"
 psync = "GW_TXN_SYNC"
 
 [connectors]
+bluesnap.base_url = "https://sandbox.bluesnap.com"
+bluesnap.secondary_base_url = "https://sandpay.bluesnap.com"
 fiservemea.base_url = "https://prod.emea.api.fiservapps.com/sandbox/ipp/payments-gateway/v2/payments"
 datatrans.base_url = "https://api.sandbox.datatrans.com"
 adyen.base_url = "https://checkout-test.adyen.com/"
