--- a/config/development.toml
+++ b/config/development.toml
@@ -60,7 +60,7 @@ cashfree.base_url = "https://sandbox.cashfree.com/"
 fiuu.base_url = "https://sandbox.merchant.razer.com/"
 payload.base_url = "https://api.payload.com"
 payu.base_url = "https://test.payu.in/"
-paytm.base_url = "https://securegw-stage.paytm.in/"
+paytm.base_url = "https://securestage.paytmpayments.com/"
 cashtocode.base_url = "https://cluster05.api-test.cashtocode.com"
 bluecode.base_url = "https://dev.eorder.reloadhero.com/"
 novalnet.base_url = "https://payport.novalnet.de/v2"
