without test code of ebanx payins

--- a/config/development.toml
+++ b/config/development.toml
@@ -43,6 +43,7 @@ mock_server_url = "http://localhost:3000/mockGateway"
 psync = "GW_TXN_SYNC"
 
 [connectors]
+ebanx.base_url = "https://api.ebanx.com"
 fiservemea.base_url = "https://prod.emea.api.fiservapps.com/sandbox/ipp/payments-gateway/v2/payments"
 datatrans.base_url = "https://api.sandbox.datatrans.com"
 adyen.base_url = "https://checkout-test.adyen.com/"
