--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -59,6 +59,8 @@ cybersource.base_url = "https://apitest.cybersource.com/"
 worldpay.base_url = "https://access.worldpay.com/"
 worldpayvantiv.base_url = "https://www.testvantivcnp.com/sandbox/new/sandbox/communicator/online"
 worldpayvantiv.secondary_base_url = "https://www.testvantivcnp.com/sandbox"
+billwerk.base_url = "https://api.reepay.com/"
+billwerk.secondary_base_url = "https://card.reepay.com/"
 
 # Generic Events Configuration
 [events]
