--- a/config/production.toml
+++ b/config/production.toml
@@ -22,6 +22,7 @@ mitm_proxy_enabled = false
 
 [connectors]
 authipay.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
+stax.base_url = "https://apiprod.fattlabs.com"
 fiservemea.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
 datatrans.base_url = "https://api.datatrans.com"
 silverflow.base_url = "https://api.silverflow.co/v1"
