--- a/config/production.toml
+++ b/config/production.toml
@@ -60,6 +60,7 @@ cybersource.base_url = "https://api.cybersource.com/"
 worldpay.base_url = "https://access.worldpay.com/"
 worldpayvantiv.base_url = "https://transact.vantivcnp.com/vap/communicator/online"
 worldpayvantiv.secondary_base_url = "https://onlinessr.vantivcnp.com"
+bamboraapac.base_url = "https://www.bambora.co.nz/interface/api/dts.asmx"
 
 # Generic Events Configuration
 [events]
