diff checker changes

--- a/config/production.toml
+++ b/config/production.toml
@@ -30,6 +30,7 @@ silverflow.base_url = "https://api.silverflow.co/v1"
 celero.base_url = "https://app.gotnpgateway.com"
 hipay.base_url = "https://secure-gateway.hipay-tpp.com/rest/"
 hipay.secondary_base_url = "https://secure2-vault.hipay-tpp.com/rest/v2/token"
+hipay.third_base_url = "https://api-gateway.hipay.com/"
 adyen.base_url = "https://{{merchant_endpoint_prefix}}-checkout-live.adyenpayments.com/checkout/"
 adyen.dispute_base_url = "https://{{merchant_endpoint_prefix}}-ca-live.adyen.com/"
 razorpay.base_url = "https://api.razorpay.com/"
