--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -29,6 +29,8 @@ datatrans.base_url = "https://api.sandbox.datatrans.com"
 silverflow.base_url = "https://api-sbx.silverflow.co/v1"
 celero.base_url = "https://sandbox.gotnpgateway.com"
 hipay.base_url = "https://secure-gateway.hipay-tpp.com/rest/"
+hipay.secondary_base_url = "https://secure2-vault.hipay-tpp.com/rest/v2/token"
+hipay.third_base_url = "https://stage-api-gateway.hipay.com/"
 adyen.base_url = "https://checkout-test.adyen.com/"
 adyen.dispute_base_url = "https://ca-test.adyen.com/"
 razorpay.base_url = "https://api.razorpay.com/"
