--- a/config/development.toml
+++ b/config/development.toml
@@ -52,7 +52,7 @@ silverflow.base_url = "https://api-sbx.silverflow.co/v1"
 celero.base_url = "https://sandbox.gotnpgateway.com"
 hipay.base_url = "https://stage-secure-gateway.hipay-tpp.com/rest/"
 hipay.secondary_base_url = "https://stage-secure2-vault.hipay-tpp.com/rest/v2/token"
-hipay.third_base_url = "https://stage-secure-gateway.hipay-tpp.com/rest/"
+hipay.third_base_url = "https://stage-api-gateway.hipay.com/"
 adyen.base_url = "https://checkout-test.adyen.com/"
 adyen.dispute_base_url = "https://ca-test.adyen.com/"
 razorpay.base_url = "https://api.razorpay.com/"
