--- a/config/production.toml
+++ b/config/production.toml
@@ -21,6 +21,8 @@ bypass_proxy_urls = ["localhost", "local"]
 mitm_proxy_enabled = false
 
 [connectors]
+itaubank.base_url = "https://boleto.${iupipes_env_dns}/boleto/v1"
+itaubank.base_url = "https://boleto./boleto/v1"
 authipay.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
 fiservemea.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
 datatrans.base_url = "https://api.datatrans.com"
