--- a/config/production.toml
+++ b/config/production.toml
@@ -63,7 +63,7 @@ cybersource.base_url = "https://api.cybersource.com/"
 worldpay.base_url = "https://access.worldpay.com/"
 worldpayvantiv.base_url = "https://transact.vantivcnp.com/vap/communicator/online"
 worldpayvantiv.secondary_base_url = "https://onlinessr.vantivcnp.com"
-bamboraapac.base_url = "https://www.bambora.co.nz/interface/api/dts.asmx"
+bamboraapac.base_url = "https://www.bambora.co.nz/interface/api"
 paypal.base_url = "https://api-m.paypal.com/"
 
 # Generic Events Configuration
