--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -31,8 +31,8 @@ fiservemea.base_url = "https://prod.emea.api.fiservapps.com/sandbox/ipp/payments
 datatrans.base_url = "https://api.sandbox.datatrans.com"
 silverflow.base_url = "https://api-sbx.silverflow.co/v1"
 celero.base_url = "https://sandbox.gotnpgateway.com"
-hipay.base_url = "https://secure-gateway.hipay-tpp.com/rest/"
-hipay.secondary_base_url = "https://secure2-vault.hipay-tpp.com/rest/v2/token"
+hipay.base_url = "https://stage-secure-gateway.hipay-tpp.com/rest/"
+hipay.secondary_base_url = "https://stage-secure2-vault.hipay-tpp.com/rest/v2/token"
 hipay.third_base_url = "https://stage-api-gateway.hipay.com/"
 globalpay.base_url = "https://apis.sandbox.globalpay.com/ucp"
 adyen.base_url = "https://checkout-test.adyen.com/"
