--- a/config/development.toml
+++ b/config/development.toml
@@ -58,6 +58,7 @@ hipay.base_url = "https://stage-secure-gateway.hipay-tpp.com/rest/"
 hipay.secondary_base_url = "https://stage-secure2-vault.hipay-tpp.com/rest/v2/token"
 hipay.third_base_url = "https://stage-api-gateway.hipay.com/"
 globalpay.base_url = "https://apis.sandbox.globalpay.com/ucp"
+forte.base_url = "https://sandbox.forte.net/api/v3"
 adyen.base_url = "https://checkout-test.adyen.com/"
 adyen.dispute_base_url = "https://ca-test.adyen.com/"
 razorpay.base_url = "https://api.razorpay.com/"
