--- a/config/production.toml
+++ b/config/production.toml
@@ -49,6 +49,7 @@ phonepe.base_url = "https://api.phonepe.com/apis/hermes/"
 cashfree.base_url = "https://sandbox.cashfree.com/"
 fiuu.base_url = "https://pay.merchant.razer.com/"
 payload.base_url = "https://api.payload.com"
+forte.base_url = "https://api.forte.net/v3"
 payu.base_url = "https://secure.payu.com/api/"
 paytm.base_url = "https://secure.paytmpayments.com/"
 cashtocode.base_url = "https://cluster14.api.cashtocode.com"
