--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -49,6 +49,7 @@ phonepe.base_url = "https://api-preprod.phonepe.com/apis/hermes/"
 cashfree.base_url = "https://sandbox.cashfree.com/"
 fiuu.base_url = "https://sandbox.merchant.razer.com/"
 payload.base_url = "https://api.payload.com"
+forte.base_url = "https://sandbox.forte.net/api/v3"
 payu.base_url = "https://test.payu.in/"
 paytm.base_url = "https://securestage.paytmpayments.com/"
 cashtocode.base_url = "https://cluster05.api-test.cashtocode.com"
