Implement custom HTTP Layer

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,11 +13,11 @@ docs/ @juspay/connector-service-maintainers
 
 backend/connector-integration/ @juspay/connector-service-connectors
 
-backend/grpc-server/src/server/ @juspay/connector-service-core
+backend/server/src/grpc/ @juspay/connector-service-core
 
 backend/domain_types/ @juspay/connector-service-framework
 backend/external-services/ @juspay/connector-service-framework
 backend/grpc-api-types/ @juspay/connector-service-framework
-backend/grpc-server/ @juspay/connector-service-framework
+backend/server/ @juspay/connector-service-framework
 backend/examples/ @juspay/connector-service-framework
 config/ @juspay/connector-service-framework
