--- a/config/production.toml
+++ b/config/production.toml
@@ -87,6 +87,7 @@ billwerk.secondary_base_url = "https://card.reepay.com/"
 nuvei.base_url = "https://secure.safecharge.com/ppp/api/v1"
 bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
 powertranz.base_url = "https://staging.ptranz.com/api"
+revolut.base_url = "https://oba-auth.revolut.com/"
 
 # Generic Events Configuration
 [events]
