--- a/config/development.toml
+++ b/config/development.toml
@@ -96,6 +96,7 @@ cybersource.base_url = "https://apitest.cybersource.com/"
 worldpay.base_url = "https://try.access.worldpay.com/"
 worldpayvantiv.base_url = "https://transact.vantivprelive.com/vap/communicator/online"
 worldpayvantiv.secondary_base_url = "https://onlinessr.vantivprelive.com"
+bamboraapac.base_url = "https://demo.ippayments.com.au/interface/api"
 paypal.base_url = "https://api-m.sandbox.paypal.com/"
 paysafe.base_url = "https://api.test.paysafe.com/paymenthub/"
 billwerk.base_url = "https://api.reepay.com/"
