--- a/config/production.toml
+++ b/config/production.toml
@@ -74,6 +74,7 @@ cybersource.base_url = "https://api.cybersource.com/"
 worldpay.base_url = "https://access.worldpay.com/"
 worldpayvantiv.base_url = "https://transact.vantivcnp.com/vap/communicator/online"
 worldpayvantiv.secondary_base_url = "https://onlinessr.vantivcnp.com"
+bamboraapac.base_url = "https://www.bambora.co.nz/interface/api"
 paypal.base_url = "https://api-m.paypal.com/"
 paysafe.base_url = "https://api.paysafe.com/paymenthub/"
 billwerk.base_url = "https://api.reepay.com/"
