--- a/config/production.toml
+++ b/config/production.toml
@@ -21,6 +21,7 @@ bypass_proxy_urls = ["localhost", "local"]
 mitm_proxy_enabled = false
 
 [connectors]
+barclaycard.base_url = "https://api.smartpayfuse.barclaycard"
 shift4.base_url = "https://api.shift4.com"
 bluesnap.base_url = "https://ws.bluesnap.com"
 bluesnap.secondary_base_url = "https://pay.bluesnap.com"
