--- a/backend/grpc-server/Cargo.toml
+++ b/backend/grpc-server/Cargo.toml
@@ -76,6 +76,7 @@ hyper-util = { version = "0.1.3", features = ["tokio"] }
 rand = "0.8.5"
 uuid = { version = "1.0", features = ["v4"] }
 reqwest = { version = "0.11", features = ["json"] }
+serial_test = "3.2.0"
 
 
 [features]
