feat(connector): [NEXIXPAY] Connector Integration (#324)
Co-authored-by: yashasvi.kapil <yashasvi.kapil@juspay.in>

--- a/config/production.toml
+++ b/config/production.toml
@@ -27,6 +27,7 @@ bluesnap.secondary_base_url = "https://pay.bluesnap.com"
 multisafepay.base_url = "https://testapi.multisafepay.com/v1/json"
 iatapay.base_url = "https://iata-pay.iata.org/api/v1"
 nmi.base_url = "https://secure.nmi.com"
+nexixpay.base_url = "https://xpay.nexigroup.com/api/phoenix-0.0/psp/api/v1"
 authipay.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
 stax.base_url = "https://apiprod.fattlabs.com"
 trustpayments.base_url = "https://webservices.securetrading.net"
