--- a/backend/common_utils/Cargo.toml
+++ b/backend/common_utils/Cargo.toml
@@ -39,6 +39,8 @@ rand = "0.8.5"
 nanoid = "0.4.0"
 regex = "1.11.1"
 semver = { version = "1.0.26", features = ["serde"] }
+prost = "0.13.0"
+prost-types = "0.13.0"
 
 # Optional features
 [features]
