--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
       - name: Run Tests
         if: ${{ env.RUN_TESTS == 'true' }}
         shell: bash
-        run: cargo nextest run --config-file .nextest.toml --profile ci -E 'not binary(bluesnap_payment_flows_test)'
+        run: cargo nextest run --config-file .nextest.toml --profile ci
 
   formatting:
     name: Check formatting
