--- a/config/development.toml
+++ b/config/development.toml
@@ -45,6 +45,7 @@ psync = "GW_TXN_SYNC"
 [connectors]
 barclaycard.base_url = "https://api.smartpayfuse-test.barclaycard"
 airwallex.base_url = "https://api-demo.airwallex.com/api/v1"
+bambora.base_url = "https://api.na.bambora.com/v1"
 shift4.base_url = "https://api.shift4.com"
 bluesnap.base_url = "https://sandbox.bluesnap.com"
 bluesnap.secondary_base_url = "https://sandpay.bluesnap.com"
