--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -23,6 +23,7 @@ mitm_proxy_enabled = false
 [connectors]
 barclaycard.base_url = "https://api.smartpayfuse-test.barclaycard"
 airwallex.base_url = "https://api-demo.airwallex.com/api/v1"
+bambora.base_url = "https://api.na.bambora.com/v1"
 shift4.base_url = "https://api.shift4.com"
 bluesnap.base_url = "https://sandbox.bluesnap.com"
 bluesnap.secondary_base_url = "https://sandpay.bluesnap.com"
