--- a/config/development.toml
+++ b/config/development.toml
@@ -23,7 +23,10 @@ type = "grpc"
 host = "0.0.0.0"
 port = 8080
 
-
+[proxy]
+idle_pool_connection_timeout = 90
+bypass_proxy_urls = []
+mitm_proxy_enabled = false
 
 [test]
 enabled = false
@@ -42,7 +45,6 @@ psync = "GW_TXN_SYNC"
 [connectors]
 mollie.base_url = "https://api.mollie.com/v2"
 mollie.secondary_base_url = "https://api.cc.mollie.com/v1/"
-barclaycard.base_url = "https://api.smartpayfuse-test.barclaycard"
 shift4.base_url = "https://api.shift4.com"
 bluesnap.base_url = "https://sandbox.bluesnap.com"
 bluesnap.secondary_base_url = "https://sandpay.bluesnap.com"
