--- a/config/production.toml
+++ b/config/production.toml
@@ -22,6 +22,7 @@ mitm_proxy_enabled = false
 
 [connectors]
 mollie.base_url = "https://api.mollie.com/v2"
+mollie.secondary_base_url = "https://api.cc.mollie.com/v1/"
 barclaycard.base_url = "https://api.smartpayfuse.barclaycard"
 shift4.base_url = "https://api.shift4.com"
 bluesnap.base_url = "https://ws.bluesnap.com"
