--- a/config/production.toml
+++ b/config/production.toml
@@ -84,6 +84,7 @@ paysafe.base_url = "https://api.paysafe.com/paymenthub/"
 billwerk.base_url = "https://api.reepay.com/"
 billwerk.secondary_base_url = "https://card.reepay.com/"
 nuvei.base_url = "https://secure.safecharge.com/ppp/api/v1"
+bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
 
 # Generic Events Configuration
 [events]
