--- a/config/development.toml
+++ b/config/development.toml
@@ -107,6 +107,7 @@ billwerk.base_url = "https://api.reepay.com/"
 billwerk.secondary_base_url = "https://card.reepay.com/"
 nuvei.base_url = "https://ppp-test.nuvei.com/ppp/api/v1"
 bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
+powertranz.base_url = "https://staging.ptranz.com/api"
 
 # Generic Events Configuration
 [events]
