--- a/config/development.toml
+++ b/config/development.toml
@@ -86,7 +86,8 @@ nexinets.base_url = "https://apitest.payengine.de/v1"
 noon.base_url = "https://api-test.noonpayments.com/"
 mifinity.base_url = "https://demo.mifinity.com/"
 braintree.base_url = "https://payments.sandbox.braintree-api.com/graphql"
-volt.base_url = "https://api.sandbox.volt.io/"
+volt.base_url = "https://gateway.sandbox.volt.io"
+volt.secondary_base_url = "https://api.sandbox.volt.io"
 cryptopay.base_url = "https://business-sandbox.cryptopay.me"
 helcim.base_url = "https://api.helcim.com/"
 dlocal.base_url = "https://sandbox.dlocal.com/"
