--- a/config/production.toml
+++ b/config/production.toml
@@ -64,7 +64,7 @@ noon.base_url = "https://api.noonpayments.com/"
 mifinity.base_url = "https://secure.mifinity.com/"
 braintree.base_url = "https://payments.braintree-api.com/graphql"
 volt.base_url = "https://gateway.volt.io"
-volt.secondary_base_url = "https://api.sandbox.volt.io"
+volt.secondary_base_url = "https://api.volt.io/"
 bluecode.base_url = "https://app.eorder.reloadhero.com/"
 cryptopay.base_url = "https://business.cryptopay.me/"
 helcim.base_url = "https://api.helcim.com/"
