feat: add getnet connector implementation

--- a/config/production.toml
+++ b/config/production.toml
@@ -21,6 +21,7 @@ bypass_proxy_urls = ["localhost", "local"]
 mitm_proxy_enabled = false
 
 [connectors]
+getnet.base_url = "https://api.pre.globalgetnet.com"
 barclaycard.base_url = "https://api.smartpayfuse.barclaycard"
 airwallex.base_url = "https://api.airwallex.com/api/v1"
 shift4.base_url = "https://api.shift4.com"
@@ -84,8 +85,6 @@ paysafe.base_url = "https://api.paysafe.com/paymenthub/"
 billwerk.base_url = "https://api.reepay.com/"
 billwerk.secondary_base_url = "https://card.reepay.com/"
 nuvei.base_url = "https://secure.safecharge.com/ppp/api/v1"
-bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
-powertranz.base_url = "https://staging.ptranz.com/api"
 
 # Generic Events Configuration
 [events]
