--- a/config/development.toml
+++ b/config/development.toml
@@ -43,6 +43,7 @@ mock_server_url = "http://localhost:3000/mockGateway"
 psync = "GW_TXN_SYNC"
 
 [connectors]
+getnet.base_url = "https://api-sbx.pre.globalgetnet.com"
 barclaycard.base_url = "https://api.smartpayfuse-test.barclaycard"
 airwallex.base_url = "https://api-demo.airwallex.com/api/v1"
 shift4.base_url = "https://api.shift4.com"
@@ -106,8 +107,6 @@ paysafe.base_url = "https://api.test.paysafe.com/paymenthub/"
 billwerk.base_url = "https://api.reepay.com/"
 billwerk.secondary_base_url = "https://card.reepay.com/"
 nuvei.base_url = "https://ppp-test.nuvei.com/ppp/api/v1"
-bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
-powertranz.base_url = "https://staging.ptranz.com/api"
 
 # Generic Events Configuration
 [events]
