feat(connector): [WORLDPAYXML] Connector Integration (#361)
Co-authored-by: Tushar Shukla <shuklatuhsar100@gmail.com>
Co-authored-by: Yashasvi Kapil <74726400+iemyashasvi@users.noreply.github.com>
Co-authored-by: Uzair Khan <29498864+maverox@users.noreply.github.com>

--- a/config/production.toml
+++ b/config/production.toml
@@ -87,6 +87,7 @@ paysafe.base_url = "https://api.paysafe.com/paymenthub/"
 billwerk.base_url = "https://api.reepay.com/"
 billwerk.secondary_base_url = "https://card.reepay.com/"
 nuvei.base_url = "https://secure.safecharge.com/ppp/api/v1"
+worldpayxml.base_url = "https://secure.worldpay.com/jsp/merchant/xml/paymentService.jsp"
 tsys.base_url = "https://gateway.transit-pass.com/"
 bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
 powertranz.base_url = "https://staging.ptranz.com/api"
