--- a/backend/common_utils/Cargo.toml
+++ b/backend/common_utils/Cargo.toml
@@ -39,6 +39,7 @@ rand = "0.8.5"
 nanoid = "0.4.0"
 regex = "1.11.1"
 semver = { version = "1.0.26", features = ["serde"] }
+struct-patch = { version = "0.10.4", features = ["nesting"] }
 
 # Optional features
 [features]
