chore: enable redsys

--- a/config/production.toml
+++ b/config/production.toml
@@ -75,6 +75,7 @@ helcim.base_url = "https://api.helcim.com/"
 dlocal.base_url = "https://api.dlocal.com/"
 placetopay.base_url = "https://checkout.placetopay.com/rest/gateway"
 rapyd.base_url = "https://api.rapyd.net"
+redsys.base_url = "https://sis.redsys.es"
 aci.base_url = "https://eu-prod.oppwa.com/"
 trustpay.base_url = "https://tpgw.trustpay.eu/"
 trustpay.base_url_bank_redirects = "https://aapi.trustpay.eu/"
