add support to record,replay,diff_check incoming requests

--- a/.gitignore
+++ b/.gitignore
@@ -412,3 +412,7 @@ $RECYCLE.BIN/
 # DrawIO files
 **/*.drawio.bkp
 gen/**
+**/node_modules
+**/grpc-recorder/static
+**/grpc-recorder/data
+**/grpc-recorder/proto
