fix: spell checks

--- a/.typos.toml
+++ b/.typos.toml
@@ -7,6 +7,8 @@ extend-ignore-re = [
 [default.extend-identifiers]
 ACI = "ACI" # Name of a connector
 BA = "BA" # Bosnia and Herzegovina country code
+ACTIVITE = "ACTIVITE" # French translation of activity
+AUTORISATION = "AUTORISATION" # French translation of authorization 
 CAF = "CAF" # Central African Republic (ISO 3166-1 alpha-3)
 FO = "FO" # Faroe Islands (the) country code
 JOD = "JOD" # Jordan
