--- a/backend/domain_types/Cargo.toml
+++ b/backend/domain_types/Cargo.toml
@@ -8,6 +8,7 @@ grpc-api-types = { path = "../grpc-api-types" }
 common_enums = { path = "../common_enums", package = "ucs_common_enums" }
 cards = { path = "../cards", package = "ucs_cards" }
 common_utils = { path = "../common_utils", package = "ucs_common_utils" }
+config_patch_derive = { path = "../config_patch_derive" }
 
 hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "2025.11.24.0", package = "masking" }
 router_derive = { git = "https://github.com/juspay/hyperswitch", tag = "2025.11.24.0" }
