chore: update typos

--- a/.typos.toml
+++ b/.typos.toml
@@ -8,6 +8,9 @@ extend-ignore-re = [
 ACI = "ACI" # Name of a connector
 BA = "BA" # Bosnia and Herzegovina country code
 CAF = "CAF" # Central African Republic (ISO 3166-1 alpha-3)
+EDE = "EDE" # Encrypt-Decrypt-Encrypt
+Ede = "Ede" # Encrypt-Decrypt-Encrypt
+ede = "ede" # Encrypt-Decrypt-Encrypt
 FO = "FO" # Faroe Islands (the) country code
 JOD = "JOD" # Jordan
 Jod = "Jod" # Jordan
