feat(connector): [GIGADAT] Connector Integration (#408)
Co-authored-by: Tushar Shukla <shuklatuhsar100@gmail.com>

--- a/config/production.toml
+++ b/config/production.toml
@@ -21,6 +21,7 @@ bypass_proxy_urls = ["localhost", "local"]
 mitm_proxy_enabled = false
 
 [connectors]
+gigadat.base_url = "https://interac.express-connect.com/"
 paybox.base_url = "https://ppps.paybox.com/PPPS.php"
 loonio.base_url = "https://loonio.ca/"
 payme.base_url = "https://live.payme.io/api/"
