feat(connector): [GETNETGLOBAL] Connector Integration  (#381)
Co-authored-by: Yashasvi Kapil <74726400+iemyashasvi@users.noreply.github.com>
Co-authored-by: Tushar Shukla <115138208+shuklatushar226@users.noreply.github.com>

--- a/config/production.toml
+++ b/config/production.toml
@@ -24,6 +24,7 @@ mitm_proxy_enabled = false
 gigadat.base_url = "https://interac.express-connect.com/"
 paybox.base_url = "https://ppps.paybox.com/PPPS.php"
 loonio.base_url = "https://loonio.ca/"
+getnet.base_url = "https://api.pre.globalgetnet.com"
 payme.base_url = "https://live.payme.io/api/"
 barclaycard.base_url = "https://api.smartpayfuse.barclaycard"
 airwallex.base_url = "https://api.airwallex.com/api/v1"
