--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -24,6 +24,7 @@ mitm_proxy_enabled = false
 gigadat.base_url = "https://interac.express-connect.com/"
 paybox.base_url = "https://preprod-ppps.paybox.com/PPPS.php"
 loonio.base_url = "https://integration.loonio.ca/"
+getnet.base_url = "https://api-sbx.pre.globalgetnet.com"
 payme.base_url = "https://sandbox.payme.io/api/"
 barclaycard.base_url = "https://api.smartpayfuse-test.barclaycard"
 airwallex.base_url = "https://api-demo.airwallex.com/api/v1"
